--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -71,3 +71,75 @@ header {
     
 }
 }
+
+@media screen and (max-width: 768px) {
+    .container {
+        display: none;
+    }
+
+    .inputs {
+        background-color: rgba(7, 61, 28, 0.685);
+        box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.568);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        
+
+        input[type="text"]{
+            margin: 10px auto;
+            width: 300px;
+        }
+        input[type="date"]{
+            
+            margin: 10px auto;
+            width: 100px;
+        }
+    
+        input[type="submit"]{
+            width: 300px;
+            margin: 10px auto;
+
+        }
+    
+        span {
+           display: none;
+            
+        }
+        
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    .inputs {
+        background-color: rgba(7, 61, 28, 0.685);
+        box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.568);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    span {
+        display: none;
+         
+     }
+
+     
+     input[type="text"]{
+        margin: 10px auto;
+        width: 300px;
+    }
+    input[type="date"]{
+        
+        margin: 10px auto;
+        width: 100px;
+    }
+
+    input[type="submit"]{
+        width: 300px;
+        margin: 10px auto;
+
+    }
+}
